--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,16 +59,18 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Gambar/images.jpeg
-    - Gambar/download.jpeg
-    - Gambar/download1.jpeg
-    - Gambar/001.png
-    - Gambar/02.png
-    - Gambar/card.jpg 
-    - Gambar/figure.png 
-    - Gambar/figure1.png
-    - Gambar/ex3.png
-    - Gambar/ex4.png 
+    - Gambar/001.jpeg
+    - Gambar/002.jpeg
+    - Gambar/003.jpeg
+    - Gambar/004.png
+    - Gambar/administrator 1.png
+    - Gambar/calendar-range.jpg 
+    - Gambar/cashier 1.png 
+    - Gambar/Delete.png
+    - Gambar/Edit.png
+    - Gambar/Gudang.png 
+    - Gambar/Logo.png
+    - Gambar/Tambah1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
