--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,12 +59,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Gambar/001.jpeg
-    - Gambar/002.jpeg
-    - Gambar/003.jpeg
-    - Gambar/004.png
+    - Gambar/001.jpg
+    - Gambar/002.jpg
+    - Gambar/003.jpg
+    - Gambar/004.jpg
     - Gambar/administrator 1.png
-    - Gambar/calendar-range.jpg 
+    - Gambar/calendar-range.png 
     - Gambar/cashier 1.png 
     - Gambar/Delete.png
     - Gambar/Edit.png
